first complete version which works with contact-field

--- a/delightcms/public/extensions/contact/template/lang/de/kontakt.json
+++ b/delightcms/public/extensions/contact/template/lang/de/kontakt.json
@@ -1,4 +1,4 @@
-{"contact": {
+{"kontakt": {
   "header_map": "Firmen-Sitz",
   "header_message": "Senden Sie mir gerne eine Nachricht",
   "info_message": "Ihre Anliegen sind bei mir immer willkommen und werden zeitnah bearbeitet",
