implement own captcha-class, rewrite contact-class, remove old xml-files, remove orm-implementation

--- a/public/template/lang/de/breadcrumb.json
+++ b/public/template/lang/de/breadcrumb.json
@@ -4,6 +4,6 @@
       "hello": "Hallo",
       "contact": "/Kontakt",
       "sitemap": "/Sitemap",
-      "thanks": "Ihre Anfrage"
+      "thanks": "/Ihre Anfrage"
 }
 }
