--- a/public/template/lang/de/sitetitle.json
+++ b/public/template/lang/de/sitetitle.json
@@ -5,7 +5,7 @@
     "hello": "Titel sage Hallo",
     "contact": "Titel Kontakt",
     "sitemap": "Titel Sitemap",
-    "thanks": "Titel Ihre Anfrage"
+    "thanks": "Titel Ihre Anfrage",
   }
 }
 
