--- a/public/template/lang/uk/breadcrumb.json
+++ b/public/template/lang/uk/breadcrumb.json
@@ -1,7 +1,7 @@
 {"breadcrumb": {
   "home": "/Home",
   "hi": "/say/Hi",
-  "hello": "Hello",
+  "hello": "/Hello",
   "contact": "/Contact",
   "sitemap": "/Sitemap",
   "thanks": "/Thanks"
